# atenea-code-context-engine-server

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
atenea_server/: api.py  bm25_index.py  chunker.py  crypto.py  embedder.py  formatter.py  indexer.py  logging_config.py  retriever.py  vector_store.py
tests/: __init__.py  compare.py  test_bm25_index.py  test_chunker.py  test_formatter.py
